--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+aiohttp==3.5.3
+async-timeout==3.0.1
+asyncio==3.4.3
+attrs==18.2.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
@@ -5,15 +9,19 @@ Flask==1.0.2
 Flask-Cors==3.0.7
 get==2018.11.19
 idna==2.8
+idna-ssl==1.1.0
 itsdangerous==1.1.0
 Jinja2==2.10
 json-rpc==1.11.1
 MarkupSafe==1.1.0
+multidict==4.5.2
 post==2018.11.20
 public==2018.11.20
 query-string==2018.11.20
 request==2018.11.20
 requests==2.21.0
 six==1.12.0
+typing-extensions==3.6.6
 urllib3==1.24.1
 Werkzeug==0.14.1
+yarl==1.3.0
